--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body>
 <h1>Exp</h1>
+<div class="container">
+    <canvas id="cnv" width="200" height="300"></canvas>
+</div>
 <script src="main.js"></script>
 </body>
 </html>
