--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,15 @@
 <body>
 <h1>Exp</h1>
 <div class="container">
-    <canvas id="cnv" width="200" height="300"></canvas>
+    <canvas id="cnv" width="200" height="300" class="chart"/>
 </div>
+
+
+<div class="test1">
+    <div class="test2"></div>
+    <div class="test2"></div>
+</div>
+
 <script src="main.js"></script>
 </body>
 </html>
