web pack config

--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,5 @@
     <canvas id="cnv" width="200" height="300"></canvas>
 </div>
 
-<script type="text/javascript" src="./vendors.js"></script><script type="text/javascript" src="./dev-server.js"></script><script type="text/javascript" src="./app.js"></script></body>
+</body>
 </html>
