--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,7 @@
                     <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Пароль</label>
-                    <!--<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">-->
+                    <label for="exampleInputPassword1">письмо</label><!--<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">-->
                     <textarea  rows="5" class="form-control" id="exampleInputPassword1" placeholder="Тело письма"></textarea>
                 </div>
                 <div class="form-group">
