--- a/src/index.html
+++ b/src/index.html
@@ -6,37 +6,51 @@
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>-->
 </head>
 <body>
-<div class="container">
-    <div class="panel panel-default">
-        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-        <div class="panel-heading">
-            <h3 class="panel-title">Название панели</h3>
-        </div>
-        <div class="panel-body">
-            <form role="form" method="post">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">письмо</label><!--<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">-->
-                    <textarea  rows="5" class="form-control" id="exampleInputPassword1" placeholder="Тело письма"></textarea>
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputFile">File input</label>
-                    <input type="file" id="exampleInputFile">
-                    <p class="help-block">Example block-level help text here.</p>
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox"> Проверить меня
-                    </label>
-                </div>
-                <button type="submit"  onsubmit="()=>false" class="btn btn-default">Отправить</button>
-            </form>
-        </div>
-    </div>
-</div>
+
+<!--<div id="map">-->
+    <!--this is map-->
+<!--</div>-->
+<!--<div class="container">-->
+    <!--<div class="icon-marker-icon"></div>-->
+    <!--<div class="panel panel-default">-->
+        <!--<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>-->
+        <!--<div class="panel-heading">-->
+            <!--<h3 class="panel-title">Название панели</h3>-->
+        <!--</div>-->
+        <!--<div class="panel-body">-->
+
+            <!--<form role="form" method="post">-->
+                <!--<div class="input-group">-->
+                    <!--<span class="input-group-addon" id="basic-addon1">-->
+                        <!--<span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span>-->
+                    <!--</span>-->
+                    <!--<input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">-->
+                <!--</div>-->
+                <!--<div class="form-group">-->
+                    <!--<label for="exampleInputEmail1">Email</label>-->
+                    <!--<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">-->
+                <!--</div>-->
+                <!--<div class="form-group">-->
+                    <!--<label for="exampleInputPassword1">письмо</label>&lt;!&ndash;<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">&ndash;&gt;-->
+                    <!--<textarea  rows="5" class="form-control" id="exampleInputPassword1" placeholder="Тело письма"></textarea>-->
+                <!--</div>-->
+                <!--<div class="form-group">-->
+                    <!--<label for="exampleInputFile">File input</label>-->
+                    <!--<input type="file" id="exampleInputFile">-->
+                    <!--<p class="help-block">Example block-level help text here.</p>-->
+                <!--</div>-->
+                <!--<div class="checkbox">-->
+                    <!--<label>-->
+                        <!--<input type="checkbox"> Проверить меня-->
+                    <!--</label>-->
+                <!--</div>-->
+                <!--<button type="submit"  onsubmit="()=>false" class="btn btn-default">Отправить</button>-->
+
+            <!--</form>-->
+        <!--</div>-->
+
+    <!--</div>-->
+<!--</div>-->
 
 </body>
 </html>
