--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
 
-<!--<div id="map">-->
-    <!--this is map-->
-<!--</div>-->
+<!--<div id="map"></div>-->
 <!--<div class="container">-->
     <!--<div class="icon-marker-icon"></div>-->
     <!--<div class="panel panel-default">-->
